--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,14 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase config with secrets
+lib/firebase_options.dart
+
+# Environment variables
+.env
+.env.*
+
+# Platform ephemeral builds (optional)
+**/macos/Flutter/ephemeral/
+**/windows/flutter/ephemeral/
