--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,12 @@ dependencies:
   connectivity_plus: ^5.0.2
   http: ^1.2.2
   image: ^4.1.7
+  translator: ^1.0.4+1
   flutter_tts: ^4.2.3
   easy_localization: ^3.0.8
   flutter_bloc: ^9.1.1
+  provider: ^6.1.2
+  shared_preferences: ^2.3.2
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
