--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,6 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+# Workaround for Kotlin incremental cache issues on mixed-drive paths (Windows).
+kotlin.incremental=false
+kotlin.compiler.execution.strategy=in-process
