--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   # 🔹 Core Firebase packages (all compatible)
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
+  google_sign_in: ^6.2.1
   cloud_firestore: ^6.0.3
   firebase_ml_model_downloader: ^0.4.0+3  # ✅ updated to fix version conflict
 
@@ -28,9 +29,12 @@ dependencies:
 
   # 🔹 Utilities and UI
   google_fonts: ^6.1.0
+  audioplayers: ^6.1.0
   path_provider: ^2.1.1
   connectivity_plus: ^5.0.2
   http: ^1.2.2
+  mime: ^1.0.5
+  http_parser: ^4.0.2
   image: ^4.1.7
   translator: ^1.0.4+1
   flutter_tts: ^4.2.3
@@ -47,3 +51,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/audio/ui_click.wav
