--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
 
   # 🔹 Core Firebase packages (all compatible)
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
-  google_sign_in: ^6.2.1
+  google_sign_in: ^6.2.0
   cloud_firestore: ^6.0.3
   firebase_ml_model_downloader: ^0.4.0+3  # ✅ updated to fix version conflict
 
@@ -31,9 +34,9 @@ dependencies:
   google_fonts: ^6.1.0
   audioplayers: ^6.1.0
   path_provider: ^2.1.1
-  connectivity_plus: ^5.0.2
+  connectivity_plus: ^7.0.0
   http: ^1.2.2
-  mime: ^1.0.5
+  mime: ^2.0.0
   http_parser: ^4.0.2
   image: ^4.1.7
   translator: ^1.0.4+1
@@ -42,14 +45,23 @@ dependencies:
   flutter_bloc: ^9.1.1
   provider: ^6.1.2
   shared_preferences: ^2.3.2
+  flutter_local_notifications: ^17.1.2
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
 
 flutter:
+  generate: true
   uses-material-design: true
   assets:
     - assets/audio/ui_click.wav
+    - assets/images/logo.png
