--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.3.2
   flutter_local_notifications: ^17.1.2
+  url_launcher: ^6.3.1
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
